[package]
name = "wasm"
version = "0.1.0"
authors = ["mtwtkman <punipuniomochi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
engine = { path = "../engine" }
wee_alloc = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }